feat: add some swaggo comments
